--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/swiper": "^6.0.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-email": "^2.1.1",
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.51.2",
+    "react-hot-toast": "^2.4.1",
+    "resend": "^3.1.0"
   },
   "devDependencies": {
     "@svgr/core": "^8.1.0",
@@ -19,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
