--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
-    "resend": "^3.1.0"
+    "resend": "^3.1.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@svgr/core": "^8.1.0",
