--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "resend": "^3.1.0",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@svgr/core": "^8.1.0",
