--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@types/swiper": "^6.0.0",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-email": "^2.1.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.2",
@@ -25,8 +25,8 @@
     "@svgr/core": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-google-recaptcha": "^2.1.9",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
